# book-em-danno

./: .gitignore  .pre-commit-config.yaml  .resume_state.md  .shellcheckrc  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SAMPLE_README.md  benchmarks.toml.aider.example  benchmarks.toml.example  build.ninja  cliff.toml  danno.toml.aider.example  danno.toml.example  pyproject.toml  session-ses_158c.md
.claude/: settings.json
.docs/: 2026-07-22-windows-handoff-slow-tui.md  agents-and-cloud-backend-refactor.md  aider-3task-cross-harness-runs.md  bench-telemetry-features.md  benchmark-grading-harness-fidelity.md  claude-clean-room-candidates.md  claude-clean-room.md  claude-code-clones-research.md  claurst-auto-compaction-findings.md  claurst-fork-and-first-class-integration-plan.md  claurst-integration.md  claurst-qwen3-coder-next-investigation.md  codex-integration.md  connecting-claude-code-to-models-investigation.md  danno-toml-harness-overrides-and-model-limits.md  danno.workspace.toml-finding-summary.md  dev-environment-setup.md  live-verify-runaway-gates.md  nvidia-nim-free-tier-probe.md  open-claude-code-integration-research.md  plan-ados-ollama-tooling.md  plan-bench-runaway-gates.md  plan-claurst-swe-benchmarks.md  plan-danno-validator.md  plan-harness-api.md  plan-harness-capability-filter.md  plan-no-capture-truely-does-not-capture.md  plan-runaway-gates-validation.md  plan-sbx-migration.md  plan-slow-sandbox-tui-tests.md  plan-stub-ai-test-harness.md  plan-test-danno-cross-platform.md  plannotator-in-docker-sandbox.md  rename-agent-to-harness.md  research-aider-polyglot-difficulty-by-test-case.md  research-tui-interactive-testing.md  review-pr88-runaway-gates.md  sandbox-agents.md  sbx-egress-model.md  sbx-migration-e2e-validation-2026-07-11.md  (+3 more)
.docs/results-slow-sandbox-tui/: README.md  macos.md
.docs/upstream-claurst-prs/: README.md  bug1-configurable-provider-stall-timeout.md  bug10-auto-compact-prune-history.md  bug3-tui-scroll-repaint-ghosting.md  bug4-ollama-context-window-fallback.md  bug5-ollama-nvidia-stream-usage.md  bug6-context-used-set-not-accumulate.md  bug7-warn-on-zero-tools.md  bug8-auto-compact-unsafe-trigger.md  bug9-esc-does-not-cancel-query.md
.github/workflows/: check.yml  release-prepare.yml  release.yml
.opencode/: ados-provenance.txt  opencode.jsonc
.specify/memory/: constitution.md
.specify/memory/parts/: ados-ollama.md  constitution-maintenance.md  documentation.md  python.md  shared.md  testing.md
docs/: conversion-plan.md  conversion-plan.md.bak  danno.workspace.toml-explanation.md  harness-api.md  ux-requirements.md  ux-requirements.md.bak
docs/research/: 2026-06-12-ollama-thinking-and-opencode-passthrough.md
plans/: releasing.md
scratch/: research-notes.md
scripts/: setup-ollama.sh
scripts/portability/: README.md  probe.py
scripts/portability/reports/: report-linux-wsl-py314.json  report-linux-wsl-py314.md  report-windows-cmd-py314.json  report-windows-cmd-py314.md  report-windows-powershell-py314.json  report-windows-powershell-py314.md
src/book_em_danno/: __init__.py  cli.py
src/book_em_danno/capture/: __init__.py  gate.py  proxy.py  summary.py  usage.py  wiring.py
src/book_em_danno/commands/: __init__.py  doctor.py  install.py  ollama.py  sandbox.py  sandbox_cli.py  tools.py
src/book_em_danno/config/: __init__.py  generate.py  loader.py  schema.py
src/book_em_danno/core/: __init__.py  exec.py  registry.py
src/book_em_danno/stubai/: __init__.py  script.py  server.py
src/danno_validator/: __init__.py  baseline.py  benchmark.py  claurst.py  codex.py  console.py  driver.py  events.py  judge.py  level0.py  level1.py  level2.py  matrix.py  menu.py  occ.py  oracle.py  report.py  run.py  serialize.py  sweep.py
src/danno_validator/harnesses/: __init__.py  _dialer.py  claude.py  claurst.py  codex.py  occ.py  opencode.py
src/danno_validator/suites/: __init__.py  aider.py  aut.py  base.py  bench.py  config.py  run.py  swebench.py
src/danno_validator/telemetry/: __init__.py  provenance.py  report.py  sampler.py  wire_metrics.py
temp/: opencode.jsonc
tests/: conftest.py  test_capture_gate.py  test_capture_no_persist.py  test_capture_proxy.py  test_capture_wiring.py  test_cli.py  test_doctor.py  test_env_assembler.py  test_exec.py  test_exec_watchdog_hostile.py  test_gate_sensor_dialects.py  test_generate.py  test_harness_compacts.py  test_install.py  test_loader.py  test_ollama_responses.py  test_overrides.py  test_provenance_gates.py  test_registry.py  test_sandbox.py  test_sandbox_cli.py  test_stubai_server.py  test_telemetry_provenance.py  test_telemetry_report.py  test_telemetry_sampler.py  test_telemetry_wire_metrics.py  test_tools.py  test_validator_aider.py  test_validator_baseline.py  test_validator_bench.py  test_validator_benchmark.py  test_validator_claurst.py  test_validator_cli.py  test_validator_codex.py  test_validator_driver.py  test_validator_driver_claude.py  test_validator_driver_claurst.py  test_validator_driver_codex.py  test_validator_driver_occ.py  test_validator_judge.py  (+13 more)
tests/data/: danno.toml.maximal.example
tests/slow/: capture_proxy.py  gates_fixtures.py  sandbox_runtime.py  test_capture.py  test_gates_drift.py  test_gates_lifecycle.py  test_gates_termination_matrix.py  test_live.py  test_ollama_v1.py  test_ollama_v1_small.py
tests/slow/tui/: __init__.py  driver.py  fixtures.py  primitives.py  test_tui_launch.py
tools/: ados-ollama  ados-sandbox  ados-sandbox-macos  gen-opencode-config
tools/.tests/: ados-sandbox.bats  gen-opencode-config.bats
