[project]
name = "book-em-danno"
version = "0.2.0"
description = "Declarative, transparent setup of OpenCode hybrid local/cloud model runtimes in a Docker sandbox, driven by danno.toml."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
]

[project.scripts]
danno = "book_em_danno.cli:app"
book-em-danno = "book_em_danno.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book_em_danno"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# typer's documented pattern puts Option/Argument in argument defaults.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: live tests that talk to real Ollama/Docker; skip when those are down",
]

[tool.mypy]
python_version = "3.13"
files = ["src"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
