[project]
name = "danno"
version = "0.16.3"
description = "Declarative, transparent setup of OpenCode in a Docker Sandbox, driven by danno.toml."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
]

[project.optional-dependencies]
# Extra *dependencies* for the validation harness — NOT the harness itself. The
# danno_validator package and the `danno validate` command always ship in the base
# wheel (see tool.hatch.build below) and run on the base deps alone: the sweep,
# MyST report, annotated menu, and results.json need only stdlib + book_em_danno.
# This extra gates only the heavy optional deps, so a base `pip install danno` stays
# lean and pip-friendly (no uv assumed): the Anthropic SDK for the administrator-AI
# (L2 dev-quality judge — `danno_validator.judge`), and, still pending, Sphinx/MyST/
# Jinja2 for `danno validate --html`. The judge lazy-imports `anthropic` and fails
# loud until you `pip install danno[validator]` (or `uv sync --extra validator`); the
# rest of the harness (sweep, report, menu, results.json) needs none of these.
validator = [
    "anthropic>=0.109.2",
]

[project.scripts]
danno = "book_em_danno.cli:app"
book-em-danno = "book_em_danno.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/book_em_danno", "src/danno_validator"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-timeout>=2.3",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# typer's documented pattern puts Option/Argument in argument defaults.
extend-immutable-calls = ["typer.Option", "typer.Argument"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: live tests that talk to real Ollama/Docker; skip when those are down",
]

[tool.mypy]
python_version = "3.13"
files = ["src"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

# `anthropic` lives in the optional `[validator]` extra, which the base gate env
# does not sync — and the judge lazy-imports it behind a fail-loud guard. Ignore the
# missing import so `ninja check` type-checks without the extra installed.
[[tool.mypy.overrides]]
module = "anthropic.*"
ignore_missing_imports = true
